Add classes to manage shader resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(/usr/local/include ./include)
 
 add_executable(grafix
     src/main.cpp
-    src/shaders.cpp
+    src/shader.cpp
     src/triangle.cpp
     src/glad/glad.c)
 
