Introduce abstraction for input device controls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories(/usr/local/include ./include)
 add_executable(grafix
     src/camera.cpp
     src/clock.cpp
+    src/controls.cpp
     src/image.cpp
     src/main.cpp
     src/model.cpp
