--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25.0)
 set (CMAKE_CXX_STANDARD 17)
 
-project(Grafix
+project(grafix
     VERSION 1.0
     DESCRIPTION "Graphics rendering engine"
     LANGUAGES CXX C)
@@ -9,13 +9,6 @@ project(Grafix
 link_directories(/usr/local/lib)
 include_directories(/usr/local/include ./include)
 
-add_executable(grafix "")
-
+add_subdirectory(external)
 add_subdirectory(src)
 add_subdirectory(include/imgui)
-
-if (APPLE)
-    target_link_libraries(grafix
-        "-framework Cocoa"
-        "-framework IOKit")
-endif()
