Move imgui to external folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ project(grafix
     LANGUAGES CXX C)
 
 link_directories(/usr/local/lib)
-include_directories(/usr/local/include ./include)
+include_directories(/usr/local/include)
 
 add_subdirectory(external)
 add_subdirectory(src)
-add_subdirectory(include/imgui)
