Move existing code into core library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ project(grafix
     LANGUAGES CXX C)
 
 add_subdirectory(external)
-add_subdirectory(src)
+add_subdirectory(libs)
+add_subdirectory(apps)
