Add Catch2 library and trivial test case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ project(grafix
     DESCRIPTION "Graphics rendering engine"
     LANGUAGES CXX C)
 
+# Update CMAKE_MODULE_PATH so that include(Catch) works and catch_discover_tests
+# is available in all subdirectories
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/external/Catch2/extras)
+include(CTest)
+include(Catch)
+
 add_subdirectory(external)
 add_subdirectory(libs)
 add_subdirectory(apps)
