Add tests for Camera and fix a math bug

--- a/libs/orc/CMakeLists.txt
+++ b/libs/orc/CMakeLists.txt
@@ -11,6 +11,9 @@ target_include_directories(orc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(orc PRIVATE ${LDEPS})
 
 # Tests
-add_executable(orc_test src/orc/scene_graph.test.cpp)
+add_executable(orc_test
+    src/orc/camera.test.cpp
+    src/orc/scene_graph.test.cpp
+)
 target_link_libraries(orc_test PRIVATE Catch2::Catch2WithMain orc ${LDEPS})
 catch_discover_tests(orc_test)
