Use pointers in place of indirect identifiers

--- a/libs/orc/CMakeLists.txt
+++ b/libs/orc/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(orc STATIC
     src/orc/light.cpp
     src/orc/obj.cpp
     src/orc/regular.cpp
-    src/orc/scene_graph.cpp
+    src/orc/scene.cpp
 )
 set(LDEPS glm::glm)
 target_include_directories(orc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -13,7 +13,7 @@ target_link_libraries(orc PRIVATE ${LDEPS})
 # Tests
 add_executable(orc_test
     src/orc/camera.test.cpp
-    src/orc/scene_graph.test.cpp
+    src/orc/scene.test.cpp
 )
 target_link_libraries(orc_test PRIVATE Catch2::Catch2WithMain orc ${LDEPS})
 catch_discover_tests(orc_test)
