--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(demo demo.main.cpp)
-target_link_libraries(demo PRIVATE core glad glfw glm imgui)
+target_link_libraries(demo PRIVATE core glad glfw glm imgui orc)
