--- a/libs/orc/CMakeLists.txt
+++ b/libs/orc/CMakeLists.txt
@@ -11,14 +11,14 @@ add_custom_command(
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/light.vert
 )
 add_custom_command(
-  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.frag.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.frag.hpp
-  COMMAND binembed orc::shaders ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.frag
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.frag
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.frag.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.frag.hpp
+  COMMAND binembed orc::shaders ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.frag
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.frag
 )
 add_custom_command(
-  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.vert.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.vert.hpp
-  COMMAND binembed orc::shaders ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.vert
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/regular.vert
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.vert.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.vert.hpp
+  COMMAND binembed orc::shaders ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.vert
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/orc/shaders/object.vert
 )
 
 # Source
@@ -29,7 +29,7 @@ add_library(orc STATIC
     src/orc/light.cpp
     src/orc/mesh.cpp
     src/orc/node.cpp
-    src/orc/regular.cpp
+    src/orc/object.cpp
     src/orc/scene.cpp
     src/orc/shader.cpp
     src/orc/stateful_visitor.cpp
@@ -38,8 +38,8 @@ add_library(orc STATIC
     # Embedded resources
     src/orc/shaders/light.frag.cpp
     src/orc/shaders/light.vert.cpp
-    src/orc/shaders/regular.frag.cpp
-    src/orc/shaders/regular.vert.cpp
+    src/orc/shaders/object.frag.cpp
+    src/orc/shaders/object.vert.cpp
 )
 target_include_directories(orc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(orc PRIVATE 
