--- a/libs/slim/CMakeLists.txt
+++ b/libs/slim/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Source
 add_library(slim STATIC
-    src/slim/automaton.cpp
+    src/slim/alphabet.cpp
     src/slim/lexer.cpp
     src/slim/regex.cpp
 )
@@ -8,7 +8,7 @@ target_include_directories(slim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 # Tests
 add_executable(slim_test
-    src/slim/automaton.test.cpp
+    src/slim/alphabet.test.cpp
     src/slim/lexer.test.cpp
     src/slim/regex.test.cpp
     src/slim/utf8.test.cpp
