Implement lexer and dfa via powerset construction

--- a/libs/slim/CMakeLists.txt
+++ b/libs/slim/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Source
 add_library(slim STATIC
     src/slim/alphabet.cpp
-    src/slim/lexer.cpp
+    src/slim/dfa.cpp
     src/slim/nfa.cpp
     src/slim/regex.cpp
 )
@@ -10,6 +10,7 @@ target_include_directories(slim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 # Tests
 add_executable(slim_test
     src/slim/alphabet.test.cpp
+    src/slim/dfa.test.cpp
     src/slim/lexer.test.cpp
     src/slim/nfa.test.cpp
     src/slim/regex.test.cpp
