--- a/libs/slim/CMakeLists.txt
+++ b/libs/slim/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(slim STATIC
     src/slim/alphabet.cpp
     src/slim/dfa.cpp
     src/slim/nfa.cpp
+    src/slim/parser.cpp
     src/slim/regex.cpp
 )
 target_include_directories(slim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -13,6 +14,7 @@ add_executable(slim_test
     src/slim/dfa.test.cpp
     src/slim/lexer.test.cpp
     src/slim/nfa.test.cpp
+    src/slim/parser.test.cpp
     src/slim/regex.test.cpp
     src/slim/utf8.test.cpp
 )
