Add Catch2 generator for enumerating files in a directory

--- a/libs/testutils/CMakeLists.txt
+++ b/libs/testutils/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(testutils STATIC src/testutils/glm.cpp)
+add_library(testutils STATIC src/testutils/dirgen.cpp src/testutils/glm.cpp)
 target_include_directories(testutils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(testutils PRIVATE glm)
+target_link_libraries(testutils PRIVATE Catch2 glm)
